# spybot

./: .gitignore  main.py  pyproject.toml
FSM/: FSM.py
filters/: filters.py
handlers/: game.py  other.py  user.py
keyboards/: keyboards.py
lexicon/: lexicon.py
rediskey/: keyredis.py
