[tool.poetry]
name = "spybot"
version = "0.1.0"
description = ""
authors = ["nevek12 <vladnevvk@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
aiogram = { version = ">=3.17.0,<4.0.0" }
environs = { version = ">=14.1.0,<15.0.0" }
redis = { version = ">=5.2.1,<6.0.0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"