[tool.poetry]
name = "spybot"
version = "0.1.0"
description = ""
authors = ["nevek12 <vladnevvk@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.18.0"
redis = "^5.2.1"
environs = "^14.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
